--- a/frontend/src/styles/utilities.scss
+++ b/frontend/src/styles/utilities.scss
@@ -10,3 +10,10 @@
 .column{
   flex-direction: column;
 }
+
+
+.grow{
+  max-height: 1000px;
+  transition: max-height;
+  transition-duration: 1500ms;
+}
