--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -2,4 +2,5 @@
 @import '../styles/variables.scss';
 @import '../styles/splash.scss';
 @import '../styles/html_defaults.scss';
+@import '../styles/navbar.scss';
 @import '../styles/utilities.scss';
