--- a/frontend/src/styles/splash.scss
+++ b/frontend/src/styles/splash.scss
@@ -1,20 +1,17 @@
 #main-splash{
   background-image: url(./background_image.png);
-  padding-top: 250px;
   height: 1000px;
   width: 100%;
 }
 
 #splash-nav{
-  position: fixed;
   display: flex;
   width: 100%;
   height: 100px;
   top: 0;
   align-items: center;
-  justify-content: flex-end;
-  background: $light-background;
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.19);
+  justify-content: space-between;
+  padding-left: 20px;
 }
 
 #splash-nav button{
@@ -43,6 +40,7 @@
 #form-container{
   margin: 0 auto;
   width: 500px;
+  margin-top: 150px;
   border: 1px solid grey;
   border-radius: 6px;
   display: flex;
@@ -103,6 +101,7 @@ input:focus{
   font-weight: bold;
   color: white;
   background: $secondary-cta;
+  border-radius: 4px;
   cursor: pointer;
 }
 .button:hover{
