Update navbar behavior to link back to login and display on non-splash pages

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -5,6 +5,11 @@
   justify-content: space-between;
   padding: 0 20px;
   button{
-    width: 150px
+    width: 150px;
+    height: 60px;
+  }
+  a{
+    width: 150px;
+    height: 60px;
   }
 }
