--- a/frontend/src/styles/splash.scss
+++ b/frontend/src/styles/splash.scss
@@ -1,5 +1,6 @@
 #main-splash{
   background-image: url(./background_image.png);
+  background-size: cover; 
   height: 1000px;
   width: 100%;
 }
@@ -85,6 +86,11 @@ input{
 
 } 
 
+.submit{
+  width: 200px;
+  height: 60px;
+}
+
 ::placeholder{
   font-size: 14px;
   font-weight: 400;
@@ -93,17 +99,8 @@ input:focus{
   border-color: $secondary-cta;
 }
 
-.button{
-  height: 60px;
-  width: 200px;
-  padding: 10px;
-  font-size: 15px;
-  font-weight: bold;
-  color: white;
-  background: $secondary-cta;
-  border-radius: 4px;
-  cursor: pointer;
-}
+
+
 .button:hover{
   background: $secondary-cta-highlight;
 }
