--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -1,6 +1,8 @@
 @import '../styles/reset.scss';
 @import '../styles/variables.scss';
+@import '../styles/app_defaults.scss';
 @import '../styles/splash.scss';
 @import '../styles/html_defaults.scss';
 @import '../styles/navbar.scss';
+@import '../styles/profile.scss';
 @import '../styles/utilities.scss';
