--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -4,12 +4,9 @@
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
-  button{
-    width: 150px;
+  button, a{
+    width: 120px;
     height: 60px;
-  }
-  a{
-    width: 150px;
-    height: 60px;
+
   }
 }
