--- a/frontend/src/styles/variables.scss
+++ b/frontend/src/styles/variables.scss
@@ -1,4 +1,5 @@
 $primary-cta: #1ABA18; //primary call to action
+$primary-cta-highlight: #21e21d;
 $secondary-cta: #7f1111;
 $secondary-cta-highlight: #951414; //for hover effects
 $dark-background-text: #f9f9f4;
