--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -4,3 +4,4 @@
 @import '../styles/html_defaults.scss';
 @import '../styles/navbar.scss';
 @import '../styles/utilities.scss';
+@import '../styles//journey.scss';
