--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   flex-direction: column;
   text-align: center;
+  line-height: 60px;
 }
 
 .create:hover{
@@ -45,6 +46,5 @@
   }
   span:last-child{
     padding-left: 20px;
-   
   }
 }
