Create rudimentary journey form styling

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -6,4 +6,5 @@
 @import '../styles/navbar.scss';
 @import '../styles/utilities.scss';
 @import '../styles//journey.scss';
+@import '../styles/journey_form.scss';
 @import '../styles/profile.scss';
