--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -2,8 +2,13 @@
   height: 100px;
   display: flex;
   align-items: center;
+  align-content: center;
   justify-content: space-between;
   padding: 0 20px;
+  .logo{
+    width: 200px;
+    height: 100px;
+  }
   button, a{
     width: 120px;
     height: 60px;
