--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -11,9 +11,9 @@
     height: 50px;
   }
   button, a{
-    width: 90px;
+    width: 110px;
     height: 60px;
-    font-size: 13px;
-    padding: 3px;
+    font-size: 18px;
+    padding: 5px 15px;
   }
 }
