--- a/frontend/src/styles/journey_form.scss
+++ b/frontend/src/styles/journey_form.scss
@@ -1,24 +1,57 @@
-#new-journey-form{
-  margin-top: 150px;
+.create-journey {
   display: flex;
-  flex-direction: column; 
-  h2{
-    font-size: 20px;
+  flex-direction: column;
+  align-items: center;
+  background-color: #d9f0b4;
+  min-height: calc(100vh - 70px);
+
+  h1 {
+    padding-top: 20px;
+    font-size: 32px;
     font-weight: bold;
-  }
-  input:last-child{
-    margin-top: 40px;
-    width: 300px;
-    height: 150px;
-    font-size: 30px;
   }
 }
 
-#journey-name{
-  width: 400px;
+#new-journey-form {
+  margin-top: 30px;
+  display: flex;
+  width: 50vw;
+  max-width: 750px;
+  flex-direction: column;
+
+  .form-fields {
+    display: flex;
+    justify-content: space-around;
+  }
+
+  h2 {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .submit-button {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    padding-left: 20px;
+
+    .upload-photos {
+      font-size: 30px;
+      font-weight: 600;
+      padding: 20px 10px;
+      height: 60px;
+    }
+  }
+}
+
+#journey-name {
+  width: 250px;
   height: 50px;
+  font-size: 16px;
+  line-height: 24px;
+  padding-left: 10px;
   margin-top: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   border-style: none;
   border: 1px solid lightgray;
   border-radius: 4px;
@@ -26,9 +59,12 @@
   box-sizing: border-box;
 }
 
-#journey-description{
-  width: 400px;
-  height:  200px;
+#journey-description {
+  padding: 5px 10px;
+  width: 300px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 24px;
   margin-top: 10px;
   border: 1px solid lightgray;
   border-radius: 4px;
@@ -37,10 +73,9 @@
   box-sizing: border-box;
 }
 
-#journey-description:focus, #journey-name:focus, #journey-description:hover, #journey-name:hover{
+#journey-description:focus,
+#journey-name:focus,
+#journey-description:hover,
+#journey-name:hover {
   border: 2px solid $primary-cta-highlight;
-}
-
-#journey-description{
-
 }
