--- a/frontend/src/styles/journey_form.scss
+++ b/frontend/src/styles/journey_form.scss
@@ -16,12 +16,13 @@
   margin-top: 30px;
   display: flex;
   width: 50vw;
-  max-width: 750px;
+  max-width: 850px;
   flex-direction: column;
 
   .form-fields {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
   }
 
   h2 {
@@ -32,20 +33,26 @@
   .submit-button {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-direction: column;
-    padding-left: 20px;
 
     .upload-photos {
       font-size: 30px;
       font-weight: 600;
-      padding: 20px 10px;
+      padding: 0px 40px;
       height: 60px;
+      width: 300px;
+      background-color: $primary-cta;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+      border-radius: 4px;
     }
   }
 }
 
 #journey-name {
-  width: 250px;
+  width: 300px;
   height: 50px;
   font-size: 16px;
   line-height: 24px;
@@ -66,6 +73,7 @@
   font-size: 16px;
   line-height: 24px;
   margin-top: 10px;
+  margin-bottom: 20px;
   border: 1px solid lightgray;
   border-radius: 4px;
   resize: none;
