Create functionality to fetch user's journeys, bootstrap journeys on refresh

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -22,6 +22,7 @@
   margin-top: 150px;
   margin-left: 40px;
   padding: 50px 50px;
+  overflow: scroll;
   div{ 
     display: flex;
     align-items: center;
