Fix navbar background

--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -4,9 +4,9 @@
   align-items: center;
   align-content: center;
   justify-content: space-between;
-  background: #d9f0b4;
+  background: transparent;
   padding: 0 20px;
-  
+  margin-bottom: -70px;
   & .logo{
     width: 170px;
     height: 50px;
