--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -53,6 +53,7 @@
 .journey-list-item {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 20px;
 
   a{
     text-decoration: none;
