--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    border-radius: 3px;
 
     .photo-img {
       padding-bottom: 10px;
@@ -24,6 +25,7 @@
         max-height: 250px;
         max-width: 250px;
         vertical-align: bottom;
+        border-radius: 3px;
       }
     }
 
@@ -37,8 +39,13 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        line-height: 24px;
-        font-size: 16px;
+        line-height: 22px;
+        font-size: 14px;
+        color: black;
+        
+        &>* {
+          margin-bottom: 10px;
+        }
       }
       .photo-inputs {
         min-width: 160px;
