--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     justify-content: space-between;
     border-radius: 3px;
+    margin-right: 10px;
 
     .photo-img {
       padding-bottom: 10px;
