--- a/frontend/src/styles/splash.scss
+++ b/frontend/src/styles/splash.scss
@@ -7,12 +7,11 @@
 
 #splash-nav{
   display: flex;
+  justify-content: flex-end;
   width: 100%;
   height: 100px;
   top: 0;
   align-items: center;
-  justify-content: space-between;
-  padding-left: 20px;
 }
 
 #splash-nav button{
@@ -46,7 +45,7 @@
 #form-container{
   margin: 0 auto;
   width: 550px;
-  margin-top: 150px;
+  margin-top: 100px;
   border: 1px solid grey;
   border-radius: 6px;
   display: flex;
