--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -1,4 +1,7 @@
 .photo-preview {
+  border: 1px solid white;
+  background: rgba(200, 200, 200, 0.4);
+  padding: 10px;
   margin-top: 40px;
   max-width: 850px;
   max-height: 50vh;
@@ -43,8 +46,8 @@
         line-height: 22px;
         font-size: 14px;
         color: black;
-        
-        &>* {
+
+        & > * {
           margin-bottom: 10px;
         }
       }
