--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -1,4 +1,3 @@
-
 .profile-content {
   display: flex;
   justify-content: space-around;
@@ -27,20 +26,22 @@
   }
 }
 
-.create:hover{
+.create:hover {
   background-color: $primary-cta-highlight;
 }
 
-.journey-list{
+.journey-list {
   width: 45%;
   margin-top: 140px;
   margin-left: 30px;
+  margin-bottom: 30px;
   padding: 25px;
   overflow: hidden;
   padding-right: 17px;
   box-sizing: content-box;
   position: relative;
-  ul{
+  ul {
+    background: rgba(200, 200, 200, 0.2);
     height: 100%;
     position: absolute;
     overflow-y: scroll;
@@ -48,11 +49,11 @@
     left: 20px;
     right: -17px;
   }
-  div{ 
+  div {
     display: flex;
     align-items: center;
   }
-  h2{
+  h2 {
     font-size: 45px;
     color: white;
     font-weight: bold;
@@ -67,7 +68,7 @@
   justify-content: space-between;
   margin-bottom: 20px;
 
-  a{
+  a {
     text-decoration: none;
     padding: 15px;
     font-size: 20px;
@@ -85,13 +86,12 @@
       box-shadow: none;
     }
 
-    &:hover{
+    &:hover {
       background-color: $primary-cta-highlight;
     }
   }
 
-  
-  span:last-child{
+  span:last-child {
     padding-left: 20px;
   }
 
@@ -111,7 +111,7 @@
   flex-direction: column;
   justify-content: center;
 
-  &>a {
+  & > a {
     width: 500px;
   }
 }
