--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -1,4 +1,4 @@
-#navbar{
+#navbar {
   height: 90px;
   display: flex;
   align-items: center;
@@ -6,12 +6,13 @@
   background: transparent;
   padding: 0 20px;
   margin-bottom: -90px;
-  & .logo{
+  & .logo {
     width: 170px;
     height: 50px;
   }
 
-  & button, a{
+  & button,
+  a {
     right: 30px;
     width: 120px;
     height: 60px;
