Add file size restriction to photo upload form with styling for error text

--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -20,6 +20,14 @@
     border-radius: 3px;
     margin-right: 10px;
 
+    .photo-too-large {
+      display: flex;
+      flex-wrap: wrap;
+      p {
+        color: black;
+      }
+    }
+
     .photo-img {
       padding-bottom: 10px;
       display: flex;
