--- a/frontend/src/styles/journey_form.scss
+++ b/frontend/src/styles/journey_form.scss
@@ -13,7 +13,7 @@
 }
 
 #form-div {
-  margin-top: 90px;
+  margin-top: 80px;
 }
 
 #new-journey-form {
@@ -33,6 +33,7 @@
     font-size: 20px;
     font-weight: bold;
     padding-bottom: 10px;
+    margin-bottom: 10px;
   }
 
   .submit-button {
@@ -59,6 +60,7 @@
       text-decoration: none;
       text-align: center;
       border-radius: 4px;
+      margin-top: 10px;
 
       &:hover {
         background-color: $primary-cta-highlight;
@@ -126,6 +128,7 @@
     text-decoration: none;
     text-align: center;
     border-radius: 4px;
+    margin-bottom: 10px;
   }
 
   h2 {
