--- a/frontend/src/styles/splash.scss
+++ b/frontend/src/styles/splash.scss
@@ -60,6 +60,7 @@
     width: 360px;
     padding: 5px 5px 5px 10px;
     outline: none;
+    font-size: 16px;
   }
   #form-inputs {
     display: flex;
