Add linkedin and github pullouts to bottom left corner

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -8,4 +8,5 @@
 @import "../styles//journey.scss";
 @import "../styles/journey_form.scss";
 @import "../styles/photo_form.scss";
+@import "../styles/abouts.scss";
 @import "../styles/profile.scss";
