--- a/frontend/src/styles/html_defaults.scss
+++ b/frontend/src/styles/html_defaults.scss
@@ -4,7 +4,7 @@ html {
 body {
   font-family: $fonts;
   height: 100%;
-  background-image: url(./splash_background.png);
+  background-image: url(./main_background.png);
   background-size: cover;
 }
 
