--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -32,17 +32,17 @@
 
 .journey-list {
   width: 45%;
+  max-height: 60vh;
   margin-top: 140px;
   margin-left: 30px;
-  margin-bottom: 30px;
   padding: 25px;
-  overflow: hidden;
   padding-right: 17px;
   box-sizing: content-box;
   position: relative;
   ul {
     background: rgba(200, 200, 200, 0.2);
     height: 100%;
+    padding: 25px;
     position: absolute;
     overflow-y: scroll;
     top: 100px;
@@ -67,6 +67,10 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 
   a {
     text-decoration: none;
