--- a/frontend/src/styles/splash.scss
+++ b/frontend/src/styles/splash.scss
@@ -1,6 +1,8 @@
 #main-splash {
   height: 100vh;
   width: 100%;
+  background-image: url(./splash_background.png);
+  background-size: cover;
 }
 
 #splash-nav {
