--- a/frontend/src/styles/journey_form.scss
+++ b/frontend/src/styles/journey_form.scss
@@ -138,3 +138,21 @@
     margin-top: 20px;
   }
 }
+
+.submitted-journey-info {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  max-width: 300px;
+  text-align: center;
+  line-height: 24px;
+  padding-bottom: 15px;
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 16px;
+  }
+}
