--- a/frontend/src/styles/journey.scss
+++ b/frontend/src/styles/journey.scss
@@ -8,8 +8,14 @@
   font-family: $fonts;
 
   &>h1 {
-    margin: 100px 0 50px 0;
+    margin: 100px 0 10px 0;
     font-size: 36px;
+    color: white;
+  }
+
+  &>h2 {
+    margin: 0 0 20px 0;
+    font-size: 24px;
     color: white;
   }
 
