--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -1,3 +1,4 @@
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 @import "../styles/reset.scss";
 @import "../styles/variables.scss";
 @import "../styles/app_defaults.scss";
