--- a/frontend/src/styles/abouts.scss
+++ b/frontend/src/styles/abouts.scss
@@ -1,5 +1,8 @@
 #abouts{
     margin-bottom: -100px;
+    &>* {
+        margin-right: 30px !important;
+    }
 }
 
 #git-list{
@@ -8,16 +11,31 @@
     right: 0;
     display: flex;
     margin: 0 5px;
-    display: flex;
     flex-direction: column;
     overflow: hidden;
     align-items: center;
     justify-content: center;
     padding-bottom: 30px;
     max-height: 140px;
-    width: 64px;
+    width: 80px;
     transition: max-height, ease-in-out, 300ms;
     margin-bottom: -100px;
+
+    & h1 {
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    &:hover {
+        background: lightgray;
+    }
+
+    &:hover h1 {
+        visibility: visible;
+        overflow: visible;
+        margin-top: 10px;
+        margin-bottom: 3px;
+    }
 }
 
 #linkedin-list{
@@ -26,16 +44,30 @@
     right: 90px;
     display: flex;
     margin: 0 5px;
-    display: flex;
     flex-direction: column;
     overflow: hidden;
     align-items: center;
     justify-content: center;
     padding-bottom: 30px;
     max-height: 130px;
-    width: 64px;
+    width: 80px;
     transition: max-height, ease-in-out, 300ms;
     margin-bottom: -100px;
+    & h1 {
+        visibility: hidden;
+        pointer-events: none;
+    }
+
+    &:hover {
+        background: lightgray;
+    }
+
+    &:hover h1 {
+        visibility: visible;
+        overflow: visible;
+        margin-top: 10px;
+        margin-bottom: 3px;
+    }
 }
 
 #linkedin-list:hover{
