--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -122,3 +122,12 @@
     width: 500px;
   }
 }
+
+.react-confirm-alert-body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bold;
+  padding: 20px;
+  width: 300px;
+};
