Remove bar from profile list

--- a/frontend/src/styles/profile.scss
+++ b/frontend/src/styles/profile.scss
@@ -39,6 +39,7 @@
   padding-right: 17px;
   box-sizing: content-box;
   position: relative;
+  overflow: hidden;
 
   ul {
     background: rgba(200, 200, 200, 0.2);
