--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -12,7 +12,7 @@
 
   .photo-form {
     padding: 10px;
-    margin-bottom: 10px;
+    margin: 0 2px 10px 2px;
     background-color: #fff;
     display: flex;
     flex-direction: column;
