--- a/frontend/src/styles/photo_form.scss
+++ b/frontend/src/styles/photo_form.scss
@@ -100,6 +100,13 @@
 }
 
 .locationPrompt {
-  font-size: 10px;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  font-size: 12px;
+  color: red;
+}
+
+#locationDetected {
   color: blue;
 }
