--- a/frontend/src/styles/journey.scss
+++ b/frontend/src/styles/journey.scss
@@ -3,8 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  background: rgb(45, 153, 76);
-  height: 1080px;
+  height: 100%;
   font-family: $fonts;
 
   &>h1 {
@@ -46,6 +45,30 @@
     width: auto;
     padding: 1rem;
   }
+}
+
+.journey-wrapper{
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  z-index: -2;
+  background-color: white;
+  height: 100%;
+}
+
+.journey::after {
+  content: "";
+  background: url(./journey-background.jpg);
+  background-size: cover;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;  
 }
 
 #tooltip {
