Remove all use of 100% height

--- a/frontend/src/styles/html_defaults.scss
+++ b/frontend/src/styles/html_defaults.scss
@@ -1,16 +1,17 @@
 html {
-  height: 100%;
+  // height: 100%;
 }
+
 body {
   font-family: $fonts;
-  height: 100%;
+  // height: 100%;
   background-image: url(./main_background.png);
   background-size: cover;
 }
 
-#root {
-  height: 100%;
-}
+// #root {
+//   height: 100%;
+// }
 
 button {
   font-family: $fonts;
