--- a/frontend/src/styles/abouts.scss
+++ b/frontend/src/styles/abouts.scss
@@ -1,6 +1,7 @@
 #abouts {
-  margin-bottom: -100px;
-  & > * {
+
+  // margin-bottom: -100px;
+  &>* {
     margin-right: 30px !important;
   }
 }
@@ -30,6 +31,7 @@
 
   div {
     padding: 5px 0;
+
     a {
       text-decoration: none;
       color: black;
@@ -70,8 +72,10 @@
     visibility: hidden;
     pointer-events: none;
   }
+
   div {
     padding: 5px 0;
+
     a {
       text-decoration: none;
       color: black;
