--- a/frontend/src/styles/journey.scss
+++ b/frontend/src/styles/journey.scss
@@ -3,23 +3,23 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  height: 100%;
+  // height: 100%;
   font-family: $fonts;
 
   &>h1 {
-    margin: 100px 0 10px 0;
+    // margin: 0 0 10px 0;
     font-size: 36px;
     color: white;
   }
 
   &>h2 {
-    margin: 0 0 20px 0;
+    margin: 5px 0 5px 0;
     font-size: 24px;
     color: white;
   }
 
   &>.share {
-    margin-top: 30px;
+    margin: 10px;
   }
 }
 
@@ -47,7 +47,7 @@
   }
 }
 
-.journey-wrapper{
+.journey-wrapper {
   position: absolute;
   top: 0;
   left: 0;
@@ -55,20 +55,20 @@
   right: 0;
   z-index: -2;
   background-color: white;
-  height: 100%;
+  // height: 100%;
 }
 
 .journey::after {
   content: "";
   background: url(./journey-background.jpg);
   background-size: cover;
-  opacity: 0.9;
+  opacity: 0.7;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   position: absolute;
-  z-index: -1;  
+  z-index: -1;
 }
 
 #tooltip {
