--- a/frontend/src/styles/navbar.scss
+++ b/frontend/src/styles/navbar.scss
@@ -5,7 +5,8 @@
   justify-content: space-between;
   background: transparent;
   padding: 0 20px;
-  margin-bottom: -90px;
+  // margin-bottom: -90px;
+
   & .logo {
     width: 170px;
     height: 50px;
@@ -17,6 +18,6 @@
     width: 120px;
     height: 60px;
     font-size: 16px;
-    z-index: 1;
+    // z-index: 1;
   }
 }
