--- a/frontend/src/styles/journey.scss
+++ b/frontend/src/styles/journey.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  margin-top: 75px;
   // height: 100%;
   font-family: $fonts;
 
