Clean scss code

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -6,7 +6,7 @@
 @import "../styles/html_defaults.scss";
 @import "../styles/navbar.scss";
 @import "../styles/utilities.scss";
-@import "../styles//journey.scss";
+@import "../styles/journey.scss";
 @import "../styles/journey_form.scss";
 @import "../styles/photo_form.scss";
 @import "../styles/abouts.scss";
