--- a/frontend/src/styles/abouts.scss
+++ b/frontend/src/styles/abouts.scss
@@ -1,9 +1,5 @@
-#abouts {
-
-  // margin-bottom: -100px;
-  &>* {
-    margin-right: 30px !important;
-  }
+#abouts>* {
+  margin-right: 30px !important;
 }
 
 #git-list {
