--- a/frontend/src/styles/journey.scss
+++ b/frontend/src/styles/journey.scss
@@ -4,19 +4,19 @@
   justify-content: flex-start;
   align-items: center;
   margin-top: 75px;
-  // height: 100%;
   font-family: $fonts;
 
   &>h1 {
-    // margin: 0 0 10px 0;
     font-size: 36px;
     color: white;
+    text-shadow: 0px 0px 6px black;
   }
 
   &>h2 {
     margin: 5px 0 5px 0;
     font-size: 24px;
     color: white;
+    text-shadow: 0px 0px 6px black;
   }
 
   &>.share {
@@ -39,12 +39,19 @@
     padding-left: 10px;
     font-size: 16px;
     text-align: center;
+    border-radius: 8px;
   }
 
   & button {
     margin-left: 20px;
-    width: auto;
-    padding: 1rem;
+    font-weight: bold;
+    font-size: 1rem;
+    padding: 0.8rem;
+    border-radius: 8px;
+
+    &:hover {
+      filter: brightness(85%)
+    }
   }
 }
 
@@ -56,7 +63,6 @@
   right: 0;
   z-index: -2;
   background-color: white;
-  // height: 100%;
 }
 
 .journey::after {
